--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,10 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/jisoo_style.css" rel="stylesheet">
+    <link href="css/moulou_style.css" rel="stylesheet">
+
+
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
