--- a/www/index.html
+++ b/www/index.html
@@ -24,11 +24,16 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="../node_modules/angular-tek-progress-bar/dist/tek.progress-bar.min.js"></script>
+
+
     <!-- Firebase -->
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
 
     <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
+
+
   </head>
   <body ng-app="starter">
 
@@ -40,6 +45,8 @@
       have templates inline in this html file if you'd like).
     -->
       <ion-nav-view></ion-nav-view>
+
+
     </ion-pane>
   </body>
 </html>
