--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,8 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+
+    <!-- Progress Bar -->
     <script src="../node_modules/angular-tek-progress-bar/dist/tek.progress-bar.min.js"></script>
 
 
@@ -32,6 +34,12 @@
 
     <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
+
+    <!-- Controller -->
+    <script src="js/controllers.js"></script>
+
+    <!-- Services -->
+    <script src="js/services.js"></script>
 
 
   </head>
@@ -43,7 +51,7 @@
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
       have templates inline in this html file if you'd like).
-    -->
+      -->
       <ion-nav-view></ion-nav-view>
 
 
