--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,7 @@
 
 
   </head>
-  <body ng-app="starter">
+  <body ng-app="SwaltyApp">
 
 
     <ion-pane>
@@ -52,8 +52,8 @@
       Templates are in the /templates folder (but you could also
       have templates inline in this html file if you'd like).
       -->
-      <ion-nav-view></ion-nav-view>
 
+      <ion-nav-view></ion-nav-view>
 
     </ion-pane>
   </body>
