--- a/www/index.html
+++ b/www/index.html
@@ -25,8 +25,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
 
-    <!-- Progress Bar -->
-    <script src="../node_modules/angular-tek-progress-bar/dist/tek.progress-bar.min.js"></script>
+
 
 
     <!-- Firebase -->
@@ -40,6 +39,9 @@
 
     <!-- Services -->
     <script src="js/services.js"></script>
+
+    <!--Jquery-->
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 
 
   </head>
